Update all HTML pages and rename '1 Introduction' to '1 Start Here'

--- a/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Module 4_ Optimizing PDFs in Acrobat.html
+++ b/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Module 4_ Optimizing PDFs in Acrobat.html
@@ -1,10 +1,48 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Module 4: Optimizing PDFs in Acrobat</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121471" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Module 4: Optimizing PDFs in Acrobat: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121471">5 Module 4_ Optimizing PDFs in Acrobat - Module 4: Optimizing PDFs in Acrobat</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<h2>Objective</h2>
+<p><span><strong>Review</strong> how to configure </span><strong>Adobe Acrobat Professional</strong>,&nbsp;and how to use it to optimize a&nbsp;PDF&nbsp;exported from a well-structured&nbsp;<strong>Microsoft Word</strong>&nbsp;or&nbsp;<strong>PowerPoint</strong>&nbsp;document.</p>
+<h2>Sections</h2>
+<p>This module has four Sections:</p>
+<ul>
+<li><a title="Section 1: Introduction to Optimizing PDFs" href="https://usucourses.instructure.com/courses/2879/pages/section-1-introduction-to-optimizing-pdfs" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-introduction-to-optimizing-pdfs" data-api-returntype="Page"><strong>Section 1:</strong>&nbsp;Introduction to Optimizing PDFs</a></li>
+<li><a title="Section 2: Checking Accessibility" href="https://usucourses.instructure.com/courses/2879/pages/section-2-checking-accessibility" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-checking-accessibility" data-api-returntype="Page"><strong>Section 2:</strong> Checking Accessibility</a></li>
+<li><a title="Section 3: Reading Order Tool" href="https://usucourses.instructure.com/courses/2879/pages/section-3-reading-order-tool" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-reading-order-tool" data-api-returntype="Page"><strong>Section 3:</strong>&nbsp;Reading Order Tool</a></li>
+<li><a title="Section 4: Content Order and Tags Order" href="https://usucourses.instructure.com/courses/2879/pages/section-4-content-order-and-tags-order" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-content-order-and-tags-order" data-api-returntype="Page"><strong>Section 4:</strong> Content Order and Tags Order</a></li>
+</ul>
+</div>
+<div>
+<p>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong><span>&nbsp;</span>before moving on to the next Section.</p>
+<p>After you have <strong>completed all of the Section Quizzes</strong>, take the Exam.</p>
+</div>
+<div>
+<h2>Exam</h2>
+<p><strong>Exam 4 </strong>has ten questions that have been randomly selected from each of the Module 4 Section Quizzes.</p>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121471" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
