--- a/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 4_ Content Order and Tags Order.html
+++ b/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 4_ Content Order and Tags Order.html
@@ -1,10 +1,65 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 4: Content Order and Tags Order</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121478" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 4: Content Order and Tags Order: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121478">5 Module 4_ Optimizing PDFs in Acrobat - Section 4: Content Order and Tags Order</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Module 4: Optimizing PDFs in Acrobat" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page">Return to Module 4</a></p>
+</div>
+<div>
+    <h2>Objectives</h2>
+    <ul>
+        <li><strong>Identify</strong><span>&nbsp;</span>the process for reviewing and repairing the content order using the<span>&nbsp;</span><em>Order</em><span>&nbsp;</span>panel.</li>
+        <li><strong>State<span>&nbsp;</span></strong>the process for reviewing and repairing the tags order using the<span>&nbsp;</span><em>Tags</em><span>&nbsp;</span>panel.</li>
+    </ul>
+</div>
+<div>
+    <h2>Learning Activities</h2>
+    <h3>Topic</h3>
+    <ul>
+        <li><a title="Content Order and Tags Order" href="https://usucourses.instructure.com/courses/2879/pages/content-order-and-tags-order" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/content-order-and-tags-order" data-api-returntype="Page"><strong>Content Order and Tags Order</strong> | Video (6:15) | Example | Guide</a></li>
+    </ul>
+</div>
+<div>
+    <h2>Resource Links</h2>
+    <ul>
+        <li><a class="inline_disabled" href="https://helpx.adobe.com/acrobat/using/touch-reading-order-tool-pdfs.html#ChangethereadingorderintheOrderpanel" target="_blank">Order&nbsp;panel</a></li>
+        <li><em>Tags</em> Panel
+            <ul>
+                <li><a class="inline_disabled" href="https://helpx.adobe.com/acrobat/using/editing-document-structure-content-tags.html#about_the_tags_panel" target="_blank">About the Tags panel</a></li>
+                <li><a class="inline_disabled" href="https://helpx.adobe.com/acrobat/using/editing-document-structure-content-tags.html#view_tags_in_the_tags_panel" target="_blank"><span>View tags in the Tags panel</span></a><span class="external_link_icon" role="presentation"><span class="screenreader-only">Links to an external site.</span></span></li>
+                <li><a class="inline_disabled" href="https://helpx.adobe.com/acrobat/using/editing-document-structure-content-tags.html#move_a_tag" target="_blank"><span>Move a Tag</span></a></li>
+            </ul>
+        </li>
+    </ul>
+    <h2>Quiz</h2>
+    <ul>
+        <li>Please review all<span>&nbsp;</span><strong>Section 4 Objectives</strong><span>&nbsp;</span>before starting this Quiz.</li>
+        <li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
+        <li><span>You have&nbsp;<strong>thirty (30) minutes</strong><span>&nbsp;</span>to complete&nbsp;<strong>five (5)</strong>&nbsp;multiple-choice questions in</span><span>&nbsp;</span>this<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
+        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
+    </ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121478" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
