--- a/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 2_ Sheets & Tables.html
+++ b/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 2_ Sheets & Tables.html
@@ -1,10 +1,161 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 2: Sheets &amp; Tables</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121485" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Tables: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121485">7 Module 5_ Accessible Excel - Section 2: Sheets &amp; Tables</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Section 4: Tables" href="https://usucourses.instructure.com/courses/2879/pages/section-4-tables" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-tables" data-api-returntype="Page">Return to Section 4</a></p>
+</div>
+<div>
+    <h2>Video</h2>
+    <p><iframe class="lti-embed" style="width: 304px; height: 231px;" title="Tables (06:10)" src="https://usucourses.instructure.com/courses/2879/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2F2246721.kaf.kaltura.com%2Fbrowseandembed%2Findex%2Fmedia%2Fentryid%2F1_gkaanzi1%2FshowDescription%2Ffalse%2FshowTitle%2Ffalse%2FshowTags%2Ffalse%2FshowDuration%2Ffalse%2FshowOwner%2Ffalse%2FshowUploadDate%2Ffalse%2FplayerSize%2F304x231%2FplayerSkin%2F43060302%2F" width="304" height="231" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *" loading="lazy"></iframe></p>
+</div>
+<div>
+    <h2>Example File</h2>
+    <ul>
+        <li><a id="813308" class="instructure_file_link instructure_scribd_file inline_disabled" href="https://usucourses.instructure.com/courses/2879/files/1235574?verifier=7cq1AfGSkgm94jsbBjwxyM83HjfX25oDb3miolzw&amp;wrap=1" target="_blank" data-canvas-previewable="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235574" data-api-returntype="File">Word Example (.docx)</a></li>
+    </ul>
+</div>
+<div>
+    <h2>Guide</h2>
+    <div class="guide">
+        <div>
+            <h1>Tables</h1>
+            <p><span>A simple, well-designed table can make it much easier to understand complex information. In this video I’ll demonstrate how to add document structure and visual formatting to a table to optimize its accessibility.</span></p>
+            <h2 class="s2">Objectives</h2>
+            <ul>
+                <li><strong>State</strong> the process for identifying column and row headers in Word and PowerPoint tables.</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Screen Reading Software Users and Tables</h2>
+            <p><span>Tables present content in a grid that can be scanned vertically (by column) and horizontally (by row). Tables usually include “headers” that label information in a specific row or column. Screen reading software users can interact with tables by moving horizontally and vertically through the table cells. When headers have been added to the document’s structure correctly, the software will present the appropriate headers as users read the table.</span></p>
+            <h3><span>Headers Correctly Identified</span></h3>
+            <p><span>For example, this table of course information has the correct structure.</span></p>
+            <p><img id="886180" src="https://usucourses.instructure.com/courses/2879/files/1235926/preview?verifier=GbTxyhR6i9q2FQtR7S8NS63ttj3me5QJWibGKiWP" alt="Screenshot of a table of course information with correct structure." width="547" height="247" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235926" data-api-returntype="File" loading="lazy"></p>
+            <p><span>When a screen reading software user navigates across the first row of data, the NVDA screen reader would read:</span></p>
+            <p><span>"Row 2: Biology 100; Day, Column 2: Monday; Start Time, Column 3: eight zero zero; End Time, Column</span></p>
+            <p><span>4: nine twenty; Instructor, Column 5: Miller."</span></p>
+            <p><span>[narrator resumes]</span></p>
+            <p><span>The row and column header information will only be associated in this manner if the headers for this </span><span>table are identified correctly. </span></p>
+            <h3><span>Headers Not Identified</span></h3>
+            <p><span>When table headers are not specified for this table,</span></p>
+            <p><img id="886179" src="https://usucourses.instructure.com/courses/2879/files/1235871/preview?verifier=fC0dOglXLLPxEVXhbbylf4YwQlg8oPpVS5uaPlmm" alt="Screenshot of a table of course information without correct structure." width="556" height="247" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235871" data-api-returntype="File" loading="lazy"></p>
+            <p><span>the headers are harder&nbsp;</span><span>for visual users to identify, and the header content will not be read to screen reader users when they are&nbsp;</span><span>navigating through the table's cells. For both types of users, the table content will be much harder to process.</span></p>
+        </div>
+        <div>
+            <h2>Creating a Table</h2>
+            <h3>Word</h3>
+            <p>I'll start by opening a new blank document in Word for Windows.</p>
+            <div class="callout instructions">
+                <div><img class="floatRight" src="https://usucourses.instructure.com/courses/2879/files/1235429/preview?verifier=RPWQLfvsjpFmLlLMQB9UyQH2DVmcGfXTq9bsXFgf" alt="windows and mac instructions" width="100" height="85" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235429" data-api-returntype="File" loading="lazy"></div>
+                <div>
+                    <h4>To create a new table in Word on Windows (or Mac):</h4>
+                    <ol class="">
+                        <li>
+                            <p>Place the cursor in the document where the<em> </em>table will be located.</p>
+                        </li>
+                        <li>
+                            <p>Open the INSERT tab on the Ribbon and go to the <em><strong>Table</strong></em> tool.<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235407/preview?verifier=OnQecvqWqBUZ71iO7dOSBSqiXlBfhN0ttt4mIACe" alt="Screenshot of the Table tool highlighted on the Insert tab on Word for Windows." width="490" height="160" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235407" data-api-returntype="File" loading="lazy"></p>
+                        </li>
+                        <li>
+                            <p>Click the <strong><em>Table</em></strong> tool and select <em>Insert Table</em> from the dropdown menu.<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235636/preview?verifier=AWFikJYiYTmh7PrxZZIq5kYOIeqrv8gadK5VLBzW" alt="Screenshot of Insert Table being selected from the Insert Table dropdown on Word for Windows." width="245" height="370" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235636" data-api-returntype="File" loading="lazy"></p>
+                        </li>
+                        <li>
+                            <p><span>Using the <em>Insert Table</em> dialog, specify the number of columns and rows.</span></p>
+                        </li>
+                        <li>
+                            <p><span>Click "OK."<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235674/preview?verifier=zfg3TCMaTHF8JpQHVaX7N79EOHPKdlNGjFWfv6il" alt="Screenshot with the Table size fields labeled number 3 and the OK button labeled number 4 on the Insert Table dialog." width="275" height="305" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235674" data-api-returntype="File" loading="lazy"></span></p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <p>There is an alternative method for inserting a table using a mouse. Navigate to the INSERT tab, select the Table tool, hover over the grid in the dropdown menu to specify the number of columns and rows, and click to insert the table.</p>
+            <p><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235632/preview?verifier=7AdGszHSuODQRqDqjqsLeuU1kgN1J7aobOL7MkHy" alt="Screenshot of a table being created by selecting a grid representing the columns and rows on Word for Windows." width="220" height="360" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235632" data-api-returntype="File" loading="lazy"></p>
+            <h3>PowerPoint</h3>
+            <p><span>Next, I'll open a blank presentation in PowerPoint on Windows.</span></p>
+            <div class="callout instructions">
+                <div><img class="floatRight" src="https://usucourses.instructure.com/courses/2879/files/1235429/preview?verifier=RPWQLfvsjpFmLlLMQB9UyQH2DVmcGfXTq9bsXFgf" alt="windows and mac instructions" width="100" height="85" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235429" data-api-returntype="File" loading="lazy"></div>
+                <div>
+                    <h4>To create a table in PowerPoint on Windows (or ) Mac:</h4>
+                    <ol class="">
+                        <ol class="">
+                            <li>
+                                <p>Click the HOME tab on the Ribbon.</p>
+                            </li>
+                            <li>
+                                <p>Select a slide <em>Layout</em> with a <em></em>content placeholder<em>.</em></p>
+                            </li>
+                            <li>
+                                <p>Select the <em>Table</em> icon on the content placeholder.<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235406/preview?verifier=Fc2WKfRurciSsCxwYlIvbgzEa92qU1wayHfuL7fd" alt="Screenshot of the table icon being selected from a content placeholder on PowerPoint for Windows." width="185" height="105" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235406" data-api-returntype="File" loading="lazy"></p>
+                            </li>
+                            <li>
+                                <p><span>Using the<em> Insert Table</em> dialog, specify the number of columns and rows.</span></p>
+                            </li>
+                            <li>
+                                <p>Click "OK."<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235630/preview?verifier=JGHNv0UcF4Af5Czt4PmpOyBT4sPHbX3kCYrbD5qQ" alt="Screenshot of the Insert Table dialog on PowerPoint for Mac." width="225" height="145" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235630" data-api-returntype="File" loading="lazy"></p>
+                            </li>
+                        </ol>
+                    </ol>
+                </div>
+            </div>
+            <p>In the Mac version of PowerPoint, after you have used the <em>Insert Table</em> dialog to specify the number of columns and rows, click <em>Insert</em>.</p>
+        </div>
+        <div>
+            <h2>Identifying Table Headers</h2>
+            <p><span>The next step after creating a table is to use the built-in styles to identify the table's headers in the first row and/or the first column. </span><span>I'll open the Word example file on Windows to review the tools that are provided for tables in Word and PowerPoint. To display the tools for tables, I'll click on the example table. Two new tabs––TABLE DESIGN and LAYOUT––appear on the Ribbon.</span></p>
+            <p><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235403/preview?verifier=eQyx1H03w12Hcd2RMRy8gZnbIUMlvOX5c7yquwul" alt="Screenshot of the Table Tools tabs highlighted on Word for Windows." width="600" height="150" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235403" data-api-returntype="File" loading="lazy"></p>
+            <h3>Table Design</h3>
+            <h4><span>Document structure</span></h4>
+            <p><span>I'll click the TABLE DESIGN tab to demonstrate how to identify column and row headers.<br><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235405/preview?verifier=m7MSdC2c2hhH0ICFijTbsD21qyV0QQ5RdGsNhaqv" alt="Screenshot of the Table Design tab selected and highlighted." width="580" height="160" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235405" data-api-returntype="File" loading="lazy"></span></p>
+            <p><span>The first section contains several checkboxes. Two of these checkboxes are related to table headers: "Header Row" for identifying column headers, and "First Column" for identifying row headers. Both of these boxes are checked by default, as most tables have both types of headers.</span></p>
+            <p><img class="instructure_file_link inline_disabled" src="https://usucourses.instructure.com/courses/2879/files/1235653/preview?verifier=pgcqTNJB886rhHeOhYILjWqKL1Eqfdejf8lBcgj9" alt="Screenshot of the Header Row and First Column checkboxes checked and highlighted." width="580" height="160" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235653" data-api-returntype="File" loading="lazy"></p>
+            <p><span>In this example, the text in the cells of the first row of the table (course, day, etc.) serve as column headers. The text in the first cell in each row functions as a row header. I will leave both Header Row and First Column checked to maintain the association between this header information and the data in the table. </span></p>
+            <div class="callout important">
+                <div><img class="floatLeft" src="https://usucourses.instructure.com/courses/2879/files/1235590/preview?verifier=cESGzAu6peE3s29G3tl2hTYMFAde3sy20YzCqlQh" alt="important information" width="50" height="50" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235590" data-api-returntype="File" loading="lazy"></div>
+                <p>There is no way to add more than one row or column of headers to a table in Word or PowerPoint, so it is important to keep its structure simple.</p>
+            </div>
+            <h4>Visual formatting</h4>
+            <p>Finally, I will choose a built-in design with a style that clearly identifies the headers visually. It is important to choose a style that meets<strong> </strong>WCAG contrast requirements, as covered in the "Contrast" section <span>video in Module 1.</span></p>
+            <p><span>On the Design ribbon I’ll click the “More” tool to open the Table Styles gallery. Please note that most of the built-in styles <strong>do not</strong> provide sufficient contrast. I’ll apply this style with a dark-blue fill on the first row, which is named “Grid Table 4 - Accent 1.” Because I have my column and row headers identified, the header text is given a bold formatting to distinguish it visually from the data text.</span></p>
+            <h2>Tables Are <strong>Not</strong> Recommended for Layout</h2>
+            <p><span>At times you may see a table used to create a visual layout in a document. For example, text presented as "columns,"</span></p>
+            <p><span><img id="809727" role="presentation" src="https://usucourses.instructure.com/courses/2879/files/1235753/preview?verifier=0GxVONcnPFiSzB1Lzn68H77d69DoeTeYmH9ZE6pX" alt="" width="620" height="430" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235753" data-api-returntype="File" loading="lazy"></span></p>
+            <p><span> or images positioned next to blocks of text.</span></p>
+            <p><span><img id="809728" role="presentation" src="https://usucourses.instructure.com/courses/2879/files/1235665/preview?verifier=gPn1WARqcp00p9gZGDnJ5QWfDRy0XGo9Pjgpv3wa" alt="" width="620" height="430" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235665" data-api-returntype="File" loading="lazy"></span></p>
+            <p><span>We do not recommend this practice. These “layout tables” may cause problems for screen reading software users. For example, row and column numbers may be read for every cell, and content will be presented based on its order in the table, not how it’s organized visually.</span></p>
+            <h2>Headings for tables</h2>
+            <p><span>A heading preceding a table is a good method for providing users with a description of the table's content. In the example file, I will add a Heading 2 of “Spring Semester” before the table.</span></p>
+            <p><img id="809726" role="presentation" src="https://usucourses.instructure.com/courses/2879/files/1235557/preview?verifier=LTAYA85L9x4rKGqXvC6X8NBKE3CR8Uf5DL6FT1fA" alt="" width="830" height="330" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235557" data-api-returntype="File" loading="lazy"></p>
+        </div>
+        <div class="topSpace">
+            <p><span>Now that you know how to create tables with the correct visual and structural information, you can use them in your documents and presentations with confidence.</span></p>
+        </div>
+    </div>
+<div>
+    <p><a class="Button" title="Section 4: Tables" href="https://usucourses.instructure.com/courses/2879/pages/section-4-tables" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-tables" data-api-returntype="Page">Return to Section 4</a></p>
+</div>
+    </div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121485" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
