--- a/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Module 1_ Document Content.html
+++ b/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Module 1_ Document Content.html
@@ -1,10 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Module 1: Document Content</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121441" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Module 1: Document Content: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121441">2 Module 1_ Document Content - Module 1: Document Content</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<h2>Objective</h2>
+<ul>
+<li><span><strong>Review</strong> basic principles and processes for optimizing the accessibility of document content in Microsoft Word and PowerPoint.</span></li>
+</ul>
+<h2>Sections</h2>
+<p>This module has five Sections:</p>
+<ul>
+<li><a title="Section 1: Overview of Document Accessibility" href="https://usucourses.instructure.com/courses/2879/pages/section-1-overview-of-document-accessibility" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-1-overview-of-document-accessibility" data-api-returntype="Page"><strong>Section 1:</strong>&nbsp;Overview of Document Accessibility</a></li>
+<li><a title="Section 2: Images" href="https://usucourses.instructure.com/courses/2879/pages/section-2-images" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-2-images" data-api-returntype="Page"><strong>Section 2:</strong>&nbsp;Images</a></li>
+<li><a title="Section 3: Hyperlinks" href="https://usucourses.instructure.com/courses/2879/pages/section-3-hyperlinks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-3-hyperlinks" data-api-returntype="Page"><strong>Section 3:</strong> <em>Hyperlinks</em></a></li>
+<li><a title="Section 4: Contrast &amp; Color Reliance" href="https://usucourses.instructure.com/courses/2879/pages/section-4-contrast-and-color-reliance" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-4-contrast-and-color-reliance" data-api-returntype="Page"><strong>Section 4:</strong>&nbsp;Contrast &amp; Color Reliance</a></li>
+<li><a title="Section 5: Optimizing Writing" href="https://usucourses.instructure.com/courses/2879/pages/section-5-optimizing-writing" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/section-5-optimizing-writing" data-api-returntype="Page"><span><strong>Section 5:</strong> Optimizing Writing</span></a></li>
+</ul>
+<p><span>Each Section has a Quiz with multiple-choice questions. You should answer<strong> all Section Quiz questions correctly</strong> before moving on to the next Section.</span></p>
+<p><span>After you have <strong>completed all of the Section Quizzes</strong>, take the Exam.</span></p>
+</div>
+<div>
+<h2>Exam</h2>
+<p><strong>Exam&nbsp;1</strong> has ten questions that have been randomly selected from each of the Module 1 Section Quizzes.</p>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121441" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
