--- a/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 2_ Images.html
+++ b/WINTER 25-26 COURSE UPDATES/2 Module 1_ Document Content/Section 2_ Images.html
@@ -1,10 +1,69 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 2: Images</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121444" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 2: Images: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121444">2 Module 1_ Document Content - Section 2: Images</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Module 1: Document Content" href="https://usucourses.instructure.com/courses/2879/pages/module-1-document-content" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-1-document-content" data-api-returntype="Page">Return to Module 1</a></p>
+</div>
+<div>
+    <h2>Objectives</h2>
+    <ul>
+        <li><strong>State</strong> two questions for determining equivalent and effective Alt Text for an image.</li>
+        <li><strong>Describe</strong> the method in Word and PowerPoint for adding Alt Text to an image.</li>
+        <li><strong>State</strong> the method in Word and PowerPoint for identifying an image as decorative.</li>
+        <li><strong>Identify</strong> the process for providing alternative text for an image created with the Icon tool.</li>
+        <li><strong>State</strong> the method for providing alternative text for SmartArt images.</li>
+        <li><strong>Describe</strong> how to provide alternative text for charts.</li>
+        <li><strong>Identify</strong><span>&nbsp;</span>the<span>&nbsp;</span><em>Wrap Text</em><span>&nbsp;</span>style required for optimized accessibility in Word.</li>
+    </ul>
+</div>
+<div>
+    <h2>Learning Activities</h2>
+</div>
+<ul>
+    <li><a title="Images: Part 1" href="https://usucourses.instructure.com/courses/2879/pages/images-part-1" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/images-part-1" data-api-returntype="Page"><strong>Images: Part 1</strong> | Video (9:23) | Example File | Guide</a></li>
+    <li><a title="Images: Part 2" href="https://usucourses.instructure.com/courses/2879/pages/images-part-2" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/images-part-2" data-api-returntype="Page"><strong>Images: Part 2</strong>&nbsp;|&nbsp;Video <span>(6:31)</span>&nbsp;| Example File | Guide</a></li>
+    <li><a title="Images: Part 3" href="https://usucourses.instructure.com/courses/2879/pages/images-part-3" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/images-part-3" data-api-returntype="Page"><strong>Images: Part 3</strong>&nbsp;|&nbsp;Video <span>(3:19)</span>&nbsp;<span>| Example File | Guide</span></a></li>
+</ul>
+<div>
+    <h2>Resource Links</h2>
+    <ul>
+        <li>Microsoft&nbsp;Resources
+            <ul>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#wordimages" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23wordimages" data-api-returntype="Page">Word</a></li>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#pptimages" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23pptimages" data-api-returntype="Page">PowerPoint</a></li>
+            </ul>
+        </li>
+    </ul>
+    <h2>Quiz</h2>
+    <ul>
+        <li>Please review all<span>&nbsp;</span><strong>Section 2 Objectives</strong><span>&nbsp;</span>before starting this Quiz.</li>
+        <li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
+        <li>You have <strong>forty-two (42) minutes</strong> to complete <strong>seven (7)</strong> multiple-choice questions in&nbsp;the&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
+        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
+    </ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121444" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
