--- a/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 2_ Optimizing PowerPoint Presentations.html
+++ b/WINTER 25-26 COURSE UPDATES/3 Module 2_ Document Structure/Section 2_ Optimizing PowerPoint Presentations.html
@@ -1,10 +1,69 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 2: Optimizing PowerPoint Presentations</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121456" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 2: Optimizing PowerPoint Presentations: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121456">3 Module 2_ Document Structure - Section 2: Optimizing PowerPoint Presentations</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Module 2: Document Structure" href="https://usucourses.instructure.com/courses/2879/pages/module-2-document-structure" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-2-document-structure" data-api-returntype="Page">Return to Module 2</a></p>
+</div>
+<div>
+    <h2>Objectives</h2>
+    <ul>
+        <li><strong>State</strong> two advantages of using built-in slide <em>Layouts</em>.</li>
+        <li><strong>Describe</strong> the function of a <em>Title Placeholder</em>.</li>
+        <li><strong>State</strong> the process for making a change to a <em>Layout</em> with the <em>Slide Master</em>.</li>
+        <li><strong>Gain</strong> an understanding of the relationship between reading order and the order of the objects on a slide.</li>
+        <li><strong>Identify</strong> the process for checking and editing the order of the objects on a slide.</li>
+    </ul>
+    <p><span style="font-size: 1.8em;">Learning Activities</span></p>
+</div>
+<div>
+    <ul>
+        <li><a title="Themes and Layouts" href="https://usucourses.instructure.com/courses/2879/pages/themes-and-layouts" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/themes-and-layouts" data-api-returntype="Page"><strong>Themes &amp; Layouts</strong> | Video (6:31) | Guide</a></li>
+        <li><a title="Slide Master" href="https://usucourses.instructure.com/courses/2879/pages/slide-master" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/slide-master" data-api-returntype="Page"><strong>Slide Master</strong> | Video (3:43) | Example File | Guide</a></li>
+        <li><a title="Reading Order &amp; Principles of Accessibility" href="https://usucourses.instructure.com/courses/2879/pages/reading-order-and-principles-of-accessibility" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/reading-order-and-principles-of-accessibility" data-api-returntype="Page"><strong>Reading Order &amp; Principles of Accessibility</strong> | Video (6:01) | Example File | Guide</a></li>
+    </ul>
+</div>
+<div>
+    <h2>Resource Links</h2>
+    <ul>
+        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#powerpoint" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23powerpoint" data-api-returntype="Page">Microsoft Resources</a><br>
+            <ul>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#design" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23design" data-api-returntype="Page">Design</a></li>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#titles" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23titles" data-api-returntype="Page">Titles</a></li>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#order" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23order" data-api-returntype="Page">Reading Order</a></li>
+                <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#embedded" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23embedded" data-api-returntype="Page">Embedded Multimedia</a></li>
+            </ul>
+        </li>
+    </ul>
+    <h2>Quiz</h2>
+    <ul>
+        <li>Please review all<span>&nbsp;</span><strong>Section 2 Objectives</strong><span>&nbsp;</span>before starting the Quiz.</li>
+        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
+        <li>You have<span>&nbsp;<strong>forty-eight (48) minutes</strong> to complete <strong>eight (8)</strong> multiple-choice qu</span>estions in the<span>&nbsp;</span><strong>timed</strong><span>&nbsp;</span>Quiz.</li>
+        <li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
+    </ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121456" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
