--- a/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 1_ Evaluating Accessibility.html
+++ b/WINTER 25-26 COURSE UPDATES/4 Module 3_ Evaluating Accessibility & Creating PDFs/Section 1_ Evaluating Accessibility.html
@@ -1,10 +1,59 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 1: Evaluating Accessibility</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121464" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 1: Evaluating Accessibility: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121464">4 Module 3_ Evaluating Accessibility &amp; Creating PDFs - Section 1: Evaluating Accessibility</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Module 3: Evaluating Accessibility &amp; Creating PDFs" href="https://usucourses.instructure.com/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-3-evaluating-accessibility-and-creating-pdfs" data-api-returntype="Page">Return to Module 3</a></p>
+</div>
+<div>
+    <h2>Objectives</h2>
+    <ul>
+        <li><strong>Identify</strong> the processes for running the <em>Accessibility Checker</em>.</li>
+        <li><strong>Describe</strong> the three types of issues identified by the <em>Accessibility Checker</em>.</li>
+        <li><strong>Identify</strong> the process for addressing an issue listed in the "Inspection Results".</li>
+    </ul>
+</div>
+<div>
+    <h2>Learning Activities</h2>
+    <ul>
+        <li><a title="Evaluating Accessibility" href="https://usucourses.instructure.com/courses/2879/pages/evaluating-accessibility" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/evaluating-accessibility" data-api-returntype="Page"><strong>Evaluating Accessibility</strong> | Video (6:26)&nbsp;| Checklist | Guide</a></li>
+    </ul>
+</div>
+<div>
+    <h2>Resource Links</h2>
+    <ul>
+        <li><a href="https://www.visionaustralia.org/services/digital-access/document-accessibility-toolbar" target="_blank">Document Accessibility Toolbar (PC only)</a></li>
+        <li><a href="https://usucourses.instructure.com/courses/2879/pages/microsoft-resources#checker" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/microsoft-resources%23checker" data-api-returntype="Page">Microsoft Resources</a></li>
+    </ul>
+    <h2>Quiz</h2>
+    <ul>
+        <li>Please review all&nbsp;<strong>Section 1 Objectives</strong>&nbsp;before starting this Quiz.</li>
+        <li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong>&nbsp;Quiz.</li>
+        <li>You have<strong>&nbsp;thirty (30)</strong>&nbsp;minutes to complete&nbsp;<strong>five&nbsp;(5)</strong>&nbsp;multiple-choice questions in this&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
+        <li>You have&nbsp;<strong>unlimited opportunities</strong>&nbsp;to&nbsp;retake this&nbsp;Quiz.</li>
+    </ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121464" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
