--- a/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 1_ Introduction To Optimizing PDFs.html
+++ b/WINTER 25-26 COURSE UPDATES/5 Module 4_ Optimizing PDFs in Acrobat/Section 1_ Introduction To Optimizing PDFs.html
@@ -1,10 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 1: Introduction To Optimizing PDFs</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121472" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 1: Introduction To Optimizing PDFs: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121472">5 Module 4_ Optimizing PDFs in Acrobat - Section 1: Introduction To Optimizing PDFs</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+<p><a class="Button" title="Module 4: Optimizing PDFs in Acrobat" href="https://usucourses.instructure.com/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-4-optimizing-pdfs-in-acrobat" data-api-returntype="Page">Return to Module 4</a></p>
+</div>
+<div>
+<h2>Objectives</h2>
+<ul>
+<li aria-level="1"><strong>Describe</strong> the process in Acrobat for identifying the application used to create a PDF.</li>
+<li aria-level="1"><strong>State</strong> the process used in Acrobat to export a PDF back to Word or PowerPoint.</li>
+<li><strong>Describe</strong> the three conceptual PDF “layers.”</li>
+<li><strong>Identify</strong> the process for adding the Tags panel to the Navigation pane.</li>
+<li><strong>Describe</strong> the process for adding the Accessibility tools to the Tools pane.</li>
+<li><strong>State</strong> the three steps for optimizing a well-structured PDF.</li>
+</ul>
+</div>
+<div>
+<h2>Learning Activities</h2>
+<h3>Topics</h3>
+<ul>
+<li><a title="Introduction to Optimizing PDFs: Part 1" href="https://usucourses.instructure.com/courses/2879/pages/introduction-to-optimizing-pdfs-part-1" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/introduction-to-optimizing-pdfs-part-1" data-api-returntype="Page"><strong>Introduction to Optimizing PDFs: Part 1</strong> | Video (3:31) | Examples | Guide</a></li>
+<li><a title="Introduction To Optimizing PDFs: Part 2" href="https://usucourses.instructure.com/courses/2879/pages/introduction-to-optimizing-pdfs-part-2" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/introduction-to-optimizing-pdfs-part-2" data-api-returntype="Page"><strong>Introduction to Optimizing PDFs: Part 2</strong> | Video (5:28) | Guide</a></li>
+</ul>
+</div>
+<div>
+<h2>Resource Links</h2>
+<ul>
+<li><a title="Adobe Resources" href="https://usucourses.instructure.com/courses/2879/pages/adobe-resources" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/adobe-resources" data-api-returntype="Page">Acrobat Pro | Overview</a></li>
+</ul>
+<h2>Quiz</h2>
+<ul>
+<li>Please review all<span>&nbsp;</span><strong>Section 1 Objectives</strong><span>&nbsp;</span>before starting this Quiz.</li>
+<li>You are free to use any resources that you have developed in this&nbsp;<strong>"open notes"</strong><span>&nbsp;</span>Quiz.</li>
+<li data-stringify-indent="0" data-stringify-border="0">You have<span>&nbsp;</span><strong data-stringify-type="bold">thirty (30) minutes</strong><span>&nbsp;</span>to complete<span>&nbsp;</span><strong data-stringify-type="bold">five (5)</strong><span>&nbsp;</span>multiple-choice questions in this<span>&nbsp;</span><strong data-stringify-type="bold">timed</strong><span>&nbsp;</span>Quiz.</li>
+<li>You have<span>&nbsp;</span><strong>unlimited opportunities</strong><span>&nbsp;</span>to&nbsp;retake this&nbsp;Quiz.</li>
+</ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121472" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
