--- a/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 5_ Optimizing Workbooks.html
+++ b/WINTER 25-26 COURSE UPDATES/7 Module 5_ Accessible Excel/Section 5_ Optimizing Workbooks.html
@@ -1,10 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 <head>
-    <title>Section 5: Optimizing Workbooks</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=https://usucourses.instructure.com/courses/2879/modules/items/121491" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2">
+    <title>Section 5: Optimizing Workbooks: WINTER 25-26 COURSE UPDATES</title>
+    
+    <!-- Canvas Core CSS Files (in order from Canvas source) -->
+    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
+    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
+    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
+    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
+    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
+    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
 </head>
-<body>
-    <p>Redirecting you to <a href="https://usucourses.instructure.com/courses/2879/modules/items/121491">7 Module 5_ Accessible Excel - Section 5: Optimizing Workbooks</a></p>
+<body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
+    <div class="content">
+        <div class="user_content">
+        <!-- <link rel="stylesheet" href="../../canvas_global_app.css"> --><div>
+    <p><a class="Button" title="Module 5: Accessible Excel" href="https://usucourses.instructure.com/courses/2879/pages/module-5-accessible-excel" data-course-type="wikiPages" data-published="true" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/module-5-accessible-excel" data-api-returntype="Page">Return to Module 5</a></p>
+</div>
+<div>
+    <h2>Objectives</h2>
+    <ul>
+        <li><strong>Identify</strong> the process for creating sufficient visual space around text.</li>
+        <li><strong>Describe</strong> when freezing a column and/or row may be appropriate.</li>
+        <li><strong>Identify</strong> the process for hiding unused columns and rows.</li>
+        <li><strong>State</strong> the process for adding a workbook <em>Title</em>.</li>
+    </ul>
+</div>
+<div>
+    <h2>Learning Activity</h2>
+    <ul>
+        <li><a title="Optimizing Workbooks" href="https://usucourses.instructure.com/courses/2879/pages/optimizing-workbooks" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/pages/optimizing-workbooks" data-api-returntype="Page"><strong>Optimizing Workbooks</strong> | Video (9:54) | Example | Guide</a></li>
+    </ul>
+</div>
+<div>
+    <h2>Resource Links</h2>
+    <h2>Quiz</h2>
+    <ul>
+        <li>Please review all&nbsp;<strong>Section 5 Objectives</strong>&nbsp;before starting the Quiz.</li>
+        <li>You are free to use any resources that you have developed in the&nbsp;<strong>"open notes"</strong>&nbsp;Quiz.</li>
+        <li>You have<strong> twenty-four (24)</strong> minutes to complete <strong>four</strong><strong> (4)</strong>&nbsp;multiple-choice questions in this&nbsp;<strong>timed</strong>&nbsp;Quiz.</li>
+        <li>You have&nbsp;<strong>unlimited opportunities</strong>&nbsp;to&nbsp;retake this&nbsp;Quiz.</li>
+    </ul>
+</div><script src="https://instructure-uploads.s3.amazonaws.com/account_43980000000000001/attachments/1016015/canvas_global_app.js"></script>
+        </div> <!-- end user_content -->
+    </div> <!-- end content -->
+    <div class="original-link">
+        <p><a href="https://usucourses.instructure.com/courses/2879/modules/items/121491" target="_blank">View original page on Canvas</a></p>
+    </div>
 </body>
 </html>
