Remove 'Open Source Document in Word Online' links from all HTML pages

--- a/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
+++ b/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
@@ -34,7 +34,7 @@
 <div class="guide">
 <div>
 <h1>Course Orientation</h1>
-<p>Welcome to the Accessible Documents: Word, PowerPoint, &amp; Acrobat course. In this video, I'm using the Chrome browser to interact with the Canvas learning management system. Canvas is optimized for Chrome. If you use a different browser, some parts of the user interface may have a different visual appearance than the one shown in this video.<br/><br/>This video will cover three main topics:</p>
+<p>Welcome to the Accessible Documents: Word, PowerPoint, &amp; Acrobat course. In this video, I'm using the Chrome browser to interact with the Canvas learning management system. Canvas is optimized for Chrome. If you use a different browser, some parts of the user interface may have a different visual appearance than the one shown in this video.<br/><br/>This video will cover three main topics:</p><p>There is a new sentence here.</p>
 <ul>
 <li>Canvas's user interface</li>
 <li>Start Here activities</li>
@@ -165,9 +165,9 @@
 </div>
 </div>
 </div> <!-- end user_content -->
-</div> <!-- end content -->
 <div class="original-link">
 <p><a href="https://usucourses.instructure.com/courses/2879/pages/course-orientation" target="_blank">View original page on Canvas</a></p>
 </div>
+</div> <!-- end content -->
 </body>
 </html>
